fixed the image not being easily visible

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body { margin: 0; padding: 0; }
 #markerCrime {
   background-image: url("resources/crime icon.png");
   background-size: cover;
+  background-color: white;
   width: 50px;
   height: 50px;
   border-radius: 50%;
